optimize sql parser